--- a/DortIslemUygulama/app/src/main/res/layout/activity_cikarma_sayfasi.xml
+++ b/DortIslemUygulama/app/src/main/res/layout/activity_cikarma_sayfasi.xml
@@ -68,4 +68,15 @@
         android:fontFamily="sans-serif-black"
         android:backgroundTint="#FE4B4B"/>
 
+    <ImageView
+        android:id="@+id/wrongImg"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginBottom="50dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/cross" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
