--- a/DortIslemUygulama/app/src/main/res/layout/activity_cikarma_sayfasi.xml
+++ b/DortIslemUygulama/app/src/main/res/layout/activity_cikarma_sayfasi.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:visibility="visible"
     tools:context=".CikarmaSayfasi">
 
     <TextView
@@ -43,30 +44,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="Cevapla"
+        android:backgroundTint="#FE4B4B"
+        android:fontFamily="sans-serif-black"
         android:onClick="islem"
+        android:text="Cevapla"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
-        app:strokeWidth="3dp"
-        android:textColor="#000000"
-        android:fontFamily="sans-serif-black"
-        android:backgroundTint="#FE4B4B"/>
+        app:strokeWidth="3dp" />
 
     <Button
         android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:backgroundTint="#FE4B4B"
+        android:fontFamily="sans-serif-black"
         android:onClick="anaSayfa"
         android:text="Ana Sayfaya Dön"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button5"
-        app:strokeWidth="3dp"
-        android:textColor="#000000"
-        android:fontFamily="sans-serif-black"
-        android:backgroundTint="#FE4B4B"/>
+        app:strokeWidth="3dp" />
 
     <ImageView
         android:id="@+id/wrongImg"
@@ -78,5 +79,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/cross" />
+
+    <ImageView
+        android:id="@+id/correctImg"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginBottom="50dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.513"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/checked" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
