--- a/DortIslemUygulama/app/src/main/res/layout/activity_bolme_sayfasi.xml
+++ b/DortIslemUygulama/app/src/main/res/layout/activity_bolme_sayfasi.xml
@@ -70,4 +70,27 @@
         android:fontFamily="sans-serif-black"
         />
 
+    <ImageView
+        android:id="@+id/wrongImg"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginBottom="50dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/cross" />
+
+    <ImageView
+        android:id="@+id/correctImg"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginBottom="50dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.513"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/checked" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
