--- a/DortIslemUygulama/app/src/main/res/layout/activity_carpma_sayfasi.xml
+++ b/DortIslemUygulama/app/src/main/res/layout/activity_carpma_sayfasi.xml
@@ -68,4 +68,26 @@
         android:textColor="#000000"
         android:fontFamily="sans-serif-black"
         android:backgroundTint="#FEDB64"/>
+    <ImageView
+        android:id="@+id/wrongImg"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginBottom="50dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/cross" />
+
+    <ImageView
+        android:id="@+id/correctImg"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginBottom="50dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.513"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/checked" />
 </androidx.constraintlayout.widget.ConstraintLayout>
