--- a/DortIslemUygulama/app/src/main/res/layout/activity_bolme_sayfasi.xml
+++ b/DortIslemUygulama/app/src/main/res/layout/activity_bolme_sayfasi.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".BolmeSayfasi">
 
+    <View
+        android:id="@+id/view2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#8BC34A"
+        android:visibility="visible"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -39,7 +48,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/cevaplaButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -64,7 +73,7 @@
         android:text="Ana Sayfaya Dön"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5"
+        app:layout_constraintTop_toBottomOf="@+id/cevaplaButton"
         app:strokeWidth="3dp"
         android:textColor="#000000"
         android:fontFamily="sans-serif-black"
@@ -74,10 +83,11 @@
         android:id="@+id/wrongImg"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="550dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.513"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/cross" />
 
@@ -85,7 +95,7 @@
         android:id="@+id/correctImg"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="550dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
