--- a/DortIslemUygulama/app/src/main/res/layout/activity_cikarma_sayfasi.xml
+++ b/DortIslemUygulama/app/src/main/res/layout/activity_cikarma_sayfasi.xml
@@ -7,6 +7,15 @@
     android:visibility="visible"
     tools:context=".CikarmaSayfasi">
 
+    <View
+        android:id="@+id/view4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#8BC34A"
+        android:visibility="visible"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -40,7 +49,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/cevaplaButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -66,14 +75,14 @@
         android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5"
+        app:layout_constraintTop_toBottomOf="@+id/cevaplaButton"
         app:strokeWidth="3dp" />
 
     <ImageView
         android:id="@+id/wrongImg"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="550dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,7 +93,7 @@
         android:id="@+id/correctImg"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="550dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
