--- a/DortIslemUygulama/app/src/main/res/layout/activity_main.xml
+++ b/DortIslemUygulama/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,22 @@
     android:visibility="visible"
     tools:context=".MainActivity">
 
+    <View
+        android:id="@+id/view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#8BC34A"
+        android:visibility="visible"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
+
     <LinearLayout
         android:layout_width="356dp"
         android:layout_height="201dp"
         android:layout_marginBottom="150dp"
         android:onClick="deneme"
         android:orientation="vertical"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -62,6 +72,7 @@
             android:text="Bölme"
             android:textColor="#000000"
             app:strokeWidth="3dp" />
+
     </LinearLayout>
 
     <ImageView
