--- a/Random2/app/src/main/res/layout/activity_main.xml
+++ b/Random2/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,12 @@
 
     <TextView
         android:id="@+id/name1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="50dp"
         android:fontFamily="sans-serif-black"
+        android:gravity="center"
         android:text="Player 1"
         android:textColor="#FF6B6B"
         android:textSize="50px"
@@ -26,10 +27,11 @@
 
     <TextView
         android:id="@+id/name2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="50dp"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="30dp"
         android:fontFamily="sans-serif-black"
+        android:gravity="center"
         android:text="Player 2"
         android:textColor="#8BC34A"
         android:textSize="50px"
