--- a/ArkaPlanSayac2Project/app/src/main/res/layout/activity_main.xml
+++ b/ArkaPlanSayac2Project/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/sayacTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
@@ -20,42 +20,47 @@
     <LinearLayout
         android:layout_width="402dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="164dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/baslatButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="baslat"
             android:text="Başlat" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/turButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="tur"
             android:text="Tur" />
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/durdurButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="durdur"
             android:text="Durdur" />
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/sifirlaButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="sıfırla"
             android:text="Sıfırla" />
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/turTextView"
         android:layout_width="350dp"
         android:layout_height="400dp"
         android:layout_marginBottom="50dp"
@@ -63,5 +68,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
