--- a/BasicGame/app/src/main/res/layout/activity_version1.xml
+++ b/BasicGame/app/src/main/res/layout/activity_version1.xml
@@ -20,6 +20,7 @@
 
 
     <androidx.gridlayout.widget.GridLayout
+        android:id="@+id/gridLayout"
         android:layout_width="390dp"
         android:layout_height="390dp"
         android:layout_marginTop="150dp"
@@ -108,6 +109,7 @@
             app:layout_column="2"
             app:layout_row="2"
             app:srcCompat="@drawable/stitch_removebg_preview" />
+
     </androidx.gridlayout.widget.GridLayout>
 
     <TextView
@@ -139,4 +141,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
