--- a/GuessTheCity/app/src/main/res/layout/activity_normal_oyun.xml
+++ b/GuessTheCity/app/src/main/res/layout/activity_normal_oyun.xml
@@ -7,7 +7,7 @@
     tools:context=".normalOyun">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/sehirtext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
@@ -27,7 +27,7 @@
         android:hint="Tahmininizi Giriniz"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/sehirtext" />
 
     <LinearLayout
         android:layout_width="wrap_content"
