--- a/UygulamaSinavi2/app/src/main/res/layout/activity_ogrenci_girisi.xml
+++ b/UygulamaSinavi2/app/src/main/res/layout/activity_ogrenci_girisi.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/kullaniciAdiEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextNumber"
+        android:id="@+id/sifreEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -42,7 +42,7 @@
         android:hint="Şifre Giriniz"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText" />
+        app:layout_constraintTop_toBottomOf="@+id/kullaniciAdiEditText" />
 
     <Button
         android:id="@+id/button3"
@@ -50,9 +50,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="Giriş"
+        android:onClick="girisYap"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />
+        app:layout_constraintTop_toBottomOf="@+id/sifreEditText" />
 
     <TextView
         android:id="@+id/textView"
@@ -63,4 +64,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
