--- a/marketOtomasyonu/app/src/main/res/layout/activity_urunler.xml
+++ b/marketOtomasyonu/app/src/main/res/layout/activity_urunler.xml
@@ -10,6 +10,7 @@
         android:id="@+id/urunler"
         android:layout_width="400dp"
         android:layout_height="600dp"
+        android:layout_marginTop="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -18,10 +19,23 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
+        android:onClick="yeniUrun"
         android:text="Yeni Ürün Ekle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:onClick="yeniUrun"
         app:layout_constraintTop_toBottomOf="@+id/urunler" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="#EA6868"
+        android:text="Çıkış Yap"
+        android:onClick="cıkısYap"
+        app:icon="@drawable/door"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
