--- a/marketOtomasyonu/app/src/main/res/layout/activity_main.xml
+++ b/marketOtomasyonu/app/src/main/res/layout/activity_main.xml
@@ -24,9 +24,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:ems="10"
-        android:inputType="text"
-        android:text=""
         android:hint="Kullanıcı Adı"
+        android:inputType="text"
+        android:text="admin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:ems="10"
+        android:text="123456"
         android:hint="Şifre"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,4 +54,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sifreText" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
