--- a/HastaneUygulamasi/app/src/main/res/layout/activity_kayit_sayfasi.xml
+++ b/HastaneUygulamasi/app/src/main/res/layout/activity_kayit_sayfasi.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E3ECEE"
     tools:context=".kayitSayfasi">
 
     <ImageView
@@ -35,7 +36,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:hint="E-mail"
+        android:elevation="10dp"
         android:ems="10"
+        android:background="@drawable/border"
+        android:padding="10dp"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +50,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:elevation="10dp"
         android:ems="10"
+        android:background="@drawable/border"
+        android:padding="10dp"
         android:hint="Şifre"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,7 +66,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:hint="Şifre Tekrar"
+        android:elevation="10dp"
         android:ems="10"
+        android:background="@drawable/border"
+        android:padding="10dp"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +80,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:elevation="10dp"
         android:ems="10"
+        android:background="@drawable/border"
+        android:padding="10dp"
         android:inputType="text"
         android:text=""
         android:hint="İsim"
@@ -83,7 +96,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:elevation="10dp"
         android:ems="10"
+        android:background="@drawable/border"
+        android:padding="10dp"
         android:inputType="text"
         android:hint="Soyisim"
         android:text=""
@@ -96,6 +112,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:background="@drawable/border"
+        android:elevation="10dp"
+        android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/kayitSoyisimText" />
@@ -105,7 +124,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:backgroundTint="#F64E67"
+        android:backgroundTint="@color/myRed"
         android:onClick="hastaKayit"
         android:text="Kayıt Ol"
         app:layout_constraintEnd_toEndOf="parent"
@@ -118,7 +137,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:backgroundTint="#F64E67"
+        android:backgroundTint="@color/myRed"
         android:onClick="geriGit"
         android:text="Geri"
         app:icon="@drawable/arrow"
