--- a/HastaneUygulamasi/app/src/main/res/drawable/border.xml
+++ b/HastaneUygulamasi/app/src/main/res/drawable/border.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<stroke android:color="#F64E67" android:width="1.5dp"/>
+<!--<stroke android:color="#F64E67" android:width="1dp"/>-->
     <corners android:radius="15dp"/>
+    <solid android:color="@color/myPink"></solid>
+    
+<!--    <solid android:color="@color/myBlue" ></solid>-->
+<!--    <gradient-->
+<!--        android:startColor="@color/myPink"-->
+<!--        android:endColor="@color/myLightPink"-->
+
+<!--        android:angle="0"/>-->
 </shape>
