--- a/HastaneUygulamasi/app/src/main/res/layout/activity_main.xml
+++ b/HastaneUygulamasi/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E3ECEE"
+    android:background="@color/myBlue"
     tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="650dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="-10dp"
+        android:layout_marginStart="-15dp"
         android:layout_marginTop="-10dp"
         android:alpha="0.8"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,15 +20,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/_85809807996bcc" />
 
-<!--    <View-->
-<!--        android:id="@+id/view"-->
-<!--        android:layout_width="450dp"-->
-<!--        android:layout_height="15dp"-->
-<!--        android:layout_marginTop="61dp"-->
-<!--        android:background="#F64E67"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="@+id/imageView" />-->
+    <!--    <View-->
+    <!--        android:id="@+id/view"-->
+    <!--        android:layout_width="450dp"-->
+    <!--        android:layout_height="15dp"-->
+    <!--        android:layout_marginTop="61dp"-->
+    <!--        android:background="#F64E67"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toTopOf="@+id/imageView" />-->
 
 
     <View
@@ -69,11 +69,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:ems="10"
         android:background="@drawable/border"
+        android:elevation="10dp"
+        android:ems="10"
         android:hint="E-mail"
-        android:padding="10dp"
         android:inputType="textEmailAddress"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -82,12 +83,13 @@
         android:id="@+id/sifreText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:padding="10dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/border"
+        android:elevation="10dp"
         android:ems="10"
         android:hint="Şifre"
         android:inputType="textPassword"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mailText" />
@@ -96,8 +98,8 @@
         android:id="@+id/girisButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:backgroundTint="#F64E67"
+        android:layout_marginTop="40dp"
+        android:backgroundTint="@color/myRed"
         android:onClick="giris"
         android:text="Giriş Yap"
         android:textSize="45px"
@@ -132,12 +134,10 @@
             android:fontFamily="casual"
             android:onClick="kayit"
             android:text="Kayıt Ol"
-            android:textColor="#F64E67"
+            android:textColor="@color/myRed"
             android:textSize="40px"
             android:textStyle="bold|italic" />
     </LinearLayout>
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
