--- a/HastaneUygulamasi/app/src/main/res/layout/activity_main.xml
+++ b/HastaneUygulamasi/app/src/main/res/layout/activity_main.xml
@@ -73,6 +73,7 @@
         android:elevation="10dp"
         android:ems="10"
         android:hint="E-mail"
+        android:text="ahmet@admin.com"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,6 +89,7 @@
         android:elevation="10dp"
         android:ems="10"
         android:hint="Şifre"
+        android:text="123456"
         android:inputType="textPassword"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
