--- a/HastaneUygulamasi/app/src/main/res/layout/activity_hasta_ana_sayfa.xml
+++ b/HastaneUygulamasi/app/src/main/res/layout/activity_hasta_ana_sayfa.xml
@@ -12,6 +12,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="100dp"
+        android:onClick="deneme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
