--- a/HastaneUygulamasi/app/src/main/res/layout/activity_randevu_al.xml
+++ b/HastaneUygulamasi/app/src/main/res/layout/activity_randevu_al.xml
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:padding="10dp"
+        android:background="@drawable/deneme_bos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,6 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:padding="10dp"
+        android:background="@drawable/deneme_bos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hastaneSpinner" />
@@ -48,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:padding="10dp"
+        android:background="@drawable/deneme_bos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bolumSpinner" />
@@ -81,8 +84,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="30dp"
-            android:background="@drawable/border"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/deneme_bos"
             android:orientation="vertical"
             android:padding="10dp">
 
@@ -127,7 +130,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/border"
+            android:background="@drawable/deneme_bos"
             android:orientation="vertical"
             android:padding="10dp"
             tools:layout_editor_absoluteX="279dp"
@@ -135,6 +138,7 @@
 
             <TextView
                 android:id="@+id/textView10"
+                android:background="@drawable/bos_item"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="monospace"
